--- a/deploy/env/us1.env
+++ b/deploy/env/us1.env
@@ -3,6 +3,7 @@ BROKER_MAX=8
 CONCURRENCY=7
 DEBUG=0
 DOCKER_DEVICE=/dev/xvdb
+DOCKER_RESERVED_CPU=0.25
 HOST_STORAGE_PATH=/tmp/codebox
 INTERNAL_WEB_HOST=api.syncano.io
 IOPS=300
