--- a/deploy/env/eu1.env
+++ b/deploy/env/eu1.env
@@ -1,8 +1,9 @@
 BROKER_MIN=2
 BROKER_MAX=8
-CONCURRENCY=8
+CONCURRENCY=7
 DEBUG=0
 DOCKER_DEVICE=/dev/sdb
+DOCKER_RESERVED_CPU=0.25
 HOST_STORAGE_PATH=/tmp/codebox
 INTERNAL_WEB_HOST=api-eu1.syncano.io
 IOPS=1500
