gVisor support and fusemount outside of container closes #3, closes #4 adds slightly smarter worker choosing algorithm

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,27 @@ services:
     build: .
     image: codebox_app
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
       - .:/go/src/github.com/Syncano/codebox
-      - /go/src/github.com/Syncano/codebox/vendor
-      - /tmp/storage:/home/codebox/storage
+      - varrun:/var/run
+      - /tmp/storage:/home/codebox/storage:rshared
+    depends_on:
+      - dind
     environment:
-      - HOST_STORAGE_PATH=/tmp/storage
+      - WRAPPERPATH=/go/src/github.com/Syncano/codebox/build/codewrapper-static
+
+  dind:
+    privileged: true
+    image: docker:17-dind
+    command:
+      - /scripts/dind-run.sh
+    volumes:
+      - varrun:/var/run
+      - /tmp/storage:/home/codebox/storage:rslave
+      - ./deploy/dind-run.sh:/scripts/dind-run.sh
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    environment:
+      - IPTABLES=1
+      # - RUNSC_RELEASE=2018-11-22
+
+volumes:
+  varrun:
