--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
       - run: 
           name: Lint
           command: |
+            sudo mount --make-rshared /
             make lint-in-docker
 
       - run: 
@@ -43,6 +44,10 @@ jobs:
           command: |
             make build-in-docker docker
 
+      - run:
+          name: Install jinja2-cli
+          command: |
+            pip install jinja2-cli[yaml]
       - run:
           name: Install kops
           command: |
