Add entrypoint that communicates through TCP Also includes: - Process stderr on container crash - Disable container autoremove - Add RBAC to codebox lb
fixes #5, fixes #12, fixes #13, fixes #14

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,10 @@ services:
       - /go/src/github.com/Syncano/codebox/vendor
     depends_on:
       - dind
-    environment:
-      - WRAPPERPATH=/go/src/github.com/Syncano/codebox/build/codewrapper-static
 
   dind:
     privileged: true
+    network_mode: host
     image: docker:17-dind
     command:
       - /scripts/dind-run.sh
