Async mode Quite a few reworks New container cache Dynamic memory setting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - /go/src/github.com/Syncano/codebox/vendor
     depends_on:
       - dind
+    environment:
+      - WRAPPERPATH=/go/src/github.com/Syncano/codebox/build/codewrapper-static
 
   dind:
     privileged: true
