--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,15 +20,15 @@
 
 [[constraint]]
   name = "github.com/evalphobia/logrus_sentry"
-  version = "0.4.6"
+  version = "0.8.2"
 
 [[constraint]]
   name = "github.com/go-redis/redis"
-  version = "6.14.1"
+  version = "6.15.2"
 
 [[constraint]]
   name = "github.com/imdario/mergo"
-  version = "0.3.6"
+  version = "0.3.7"
 
 [[constraint]]
   name = "github.com/opentracing/opentracing-go"
@@ -48,11 +48,15 @@
 
 [[constraint]]
   name = "github.com/sirupsen/logrus"
-  version = "1.1.1"
+  version = "1.4.0"
 
 [[constraint]]
   name = "github.com/smartystreets/goconvey"
-  version = "1.6.3"
+  revision = "200a235640ff2643e3126834b67f3e93df76640a"
+
+[[override]]
+  name = "github.com/smartystreets/assertions"
+  revision = "980c5ac6f3acb6ce1cfe13160e49188807174fbe"
 
 [[constraint]]
   name = "github.com/spf13/afero"
@@ -60,7 +64,7 @@
 
 [[constraint]]
   name = "github.com/stretchr/testify"
-  version = "1.2.1"
+  version = "1.3.0"
 
 [[constraint]]
   name = "github.com/urfave/cli"
@@ -68,11 +72,11 @@
 
 [[constraint]]
   name = "github.com/vmihailenco/msgpack"
-  version = "4.0.0"
+  version = "4.0.2"
 
 [[constraint]]
   name = "google.golang.org/grpc"
-  version = "1.15.0"
+  version = "1.19.0"
 
 [[constraint]]
   name = "gopkg.in/go-playground/validator.v9"
