--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,6 @@
 run:
   tests: false
-  skip-dirs: 
+  skip-dirs:
     - assets
     - dev
     - proto
@@ -38,3 +38,4 @@ linters:
     - prealloc
     - gochecknoglobals
     - gochecknoinits
+    - funlen
