chore: move to public syncano/codebox image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       - run:
           name: Setup system
           command: |
-              docker login -u="$DOCKER_LOGIN" -p="$DOCKER_PASS" quay.io
+              docker login -u="$DOCKER_LOGIN" -p="$DOCKER_PASS" $DOCKER_SERVER
               sudo mount --make-rshared /
 
       - run:
