fix: disable internal api web host

--- a/deploy/env/staging.env
+++ b/deploy/env/staging.env
@@ -5,7 +5,7 @@ DEBUG=1
 DOCKER_DEVICE=/dev/xvdb
 DOCKER_RESERVED_CPU=125
 HOST_STORAGE_PATH=/tmp/codebox
-INTERNAL_WEB_HOST=api.syncano.rocks
+INTERNAL_WEB_HOST=api-disable.syncano.rocks
 IOPS=300
 SCALING_ENABLED=1
 SCALING_COOLDOWN=2m
