--- a/deploy/env/us1.env
+++ b/deploy/env/us1.env
@@ -5,7 +5,7 @@ DEBUG=0
 DOCKER_DEVICE=/dev/xvdb
 DOCKER_RESERVED_CPU=125
 HOST_STORAGE_PATH=/tmp/codebox
-INTERNAL_WEB_HOST=api.syncano.io
+INTERNAL_WEB_HOST=api-disable.syncano.io
 IOPS=300
 SCALING_ENABLED=1
 SCALING_COOLDOWN=5m
