chore: move to jaeger collector

--- a/deploy/env/eu1.env
+++ b/deploy/env/eu1.env
@@ -6,7 +6,6 @@ DOCKER_DEVICE=/dev/sdb
 DOCKER_DNS=169.254.169.254
 DOCKER_RESERVED_CPU=125
 HOST_STORAGE_PATH=/tmp/codebox
-INTERNAL_WEB_HOST=api-disable-eu1.syncano.io
 IOPS=1500
 SCALING_ENABLED=1
 SCALING_COOLDOWN=5m
@@ -16,4 +15,4 @@ SCALING_MIN=2
 SCALING_MAX=16
 SENTRY_ENVIRONMENT=eu1
 WORKER_MIN_READY=1
-ZIPKIN_ADDR=zipkin.monitoring
+ZIPKIN_ADDR=jaeger-collector.monitoring
