--- a/deploy/env/staging.env
+++ b/deploy/env/staging.env
@@ -3,9 +3,9 @@ BROKER_MAX=8
 CONCURRENCY=15
 DEBUG=1
 DOCKER_DEVICE=/dev/xvdb
+DOCKER_DNS=172.20.0.2
 DOCKER_RESERVED_CPU=125
 HOST_STORAGE_PATH=/tmp/codebox
-INTERNAL_WEB_HOST=api-disable.syncano.rocks
 IOPS=300
 SCALING_ENABLED=1
 SCALING_COOLDOWN=2m
@@ -14,4 +14,4 @@ SCALING_FREECPU_MAX=3000
 SCALING_MIN=1
 SCALING_MAX=8
 WORKER_MIN_READY=1
-ZIPKIN_ADDR=zipkin.monitoring
+ZIPKIN_ADDR=jaeger-collector.monitoring
