--- a/deploy/env/us1.env
+++ b/deploy/env/us1.env
@@ -3,9 +3,9 @@ BROKER_MAX=8
 CONCURRENCY=15
 DEBUG=0
 DOCKER_DEVICE=/dev/xvdb
+DOCKER_DNS=172.20.0.2
 DOCKER_RESERVED_CPU=125
 HOST_STORAGE_PATH=/tmp/codebox
-INTERNAL_WEB_HOST=api-disable.syncano.io
 IOPS=300
 SCALING_ENABLED=1
 SCALING_COOLDOWN=5m
@@ -15,4 +15,4 @@ SCALING_MIN=2
 SCALING_MAX=16
 SENTRY_ENVIRONMENT=us1
 WORKER_MIN_READY=1
-ZIPKIN_ADDR=zipkin.monitoring
+ZIPKIN_ADDR=jaeger-collector.monitoring
