add whitelist, debug

--- a/deploy/env/us1.env
+++ b/deploy/env/us1.env
@@ -5,6 +5,7 @@ DEBUG=0
 DOCKER_DEVICE=/dev/xvdb
 DOCKER_DNS=172.20.0.2
 DOCKER_RESERVED_CPU=125
+DOCKER_WHITELIST=100.64.122.206
 HOST_STORAGE_PATH=/tmp/codebox
 IOPS=300
 SCALING_ENABLED=1
