feat: use opencensus

--- a/deploy/env/staging.env
+++ b/deploy/env/staging.env
@@ -14,4 +14,4 @@ SCALING_FREECPU_MAX=3000
 SCALING_MIN=1
 SCALING_MAX=8
 WORKER_MIN_READY=1
-ZIPKIN_ADDR=jaeger-collector.monitoring
+JAEGER_COLLECTOR_ENDPOINT=http://jaeger-collector.monitoring:14268/api/traces
