--- a/deploy/env/us1.env
+++ b/deploy/env/us1.env
@@ -15,4 +15,4 @@ SCALING_MIN=2
 SCALING_MAX=16
 SENTRY_ENVIRONMENT=us1
 WORKER_MIN_READY=1
-ZIPKIN_ADDR=jaeger-collector.monitoring
+JAEGER_COLLECTOR_ENDPOINT=http://jaeger-collector.monitoring:14268/api/traces
