--- a/deploy/env/staging.env
+++ b/deploy/env/staging.env
@@ -2,11 +2,12 @@ BROKER_MIN=1
 BROKER_MAX=8
 CONCURRENCY=15
 DEBUG=1
-DOCKER_DEVICE=/dev/xvdb
-DOCKER_DNS=8.8.8.8,8.8.4.4
+DOCKER_DEVICE=/dev/sdb
+DOCKER_DNS=169.254.169.254
 DOCKER_RESERVED_CPU=125
+DOCKER_WHITELIST=10.0.83.140
 HOST_STORAGE_PATH=/tmp/codebox
-IOPS=300
+IOPS=1500
 SCALING_ENABLED=1
 SCALING_COOLDOWN=2m
 SCALING_FREECPU_MIN=1000
