fix: container cache removal

--- a/deploy/env/staging.env
+++ b/deploy/env/staging.env
@@ -1,6 +1,8 @@
 BROKER_MIN=1
 BROKER_MAX=8
+MCPU=2000
 CONCURRENCY=15
+DEFAULT_SCRIPT_MCPU=125
 DEBUG=1
 DOCKER_DEVICE=/dev/sdb
 DOCKER_DNS=169.254.169.254
