--- a/deploy/env/eu1.env
+++ b/deploy/env/eu1.env
@@ -1,6 +1,8 @@
 BROKER_MIN=2
 BROKER_MAX=8
+MCPU=2000
 CONCURRENCY=15
+DEFAULT_SCRIPT_MCPU=125
 DEBUG=0
 DOCKER_DEVICE=/dev/sdb
 DOCKER_DNS=169.254.169.254
